--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,6 +1,5 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Maven Package
 
 on:
@@ -14,22 +13,25 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write  # GitHub Package 发布所需权限
+      id-token: write  # 必须的权限来发布到 GitHub Packages
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Check out the code
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+    - name: Set up Maven
+      run: sudo apt-get install maven
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/YYDSQAQ1024/PremiumTerminal
+    - name: Publish to GitHub Packages
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub自动生成的认证令牌
+      run: mvn deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/YYDSQAQ1024/PremiumTerminal
