--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,7 @@ name: Build and Upload JAR
 
 on:
   push:
-    branches:
-      - main  # 或者你想触发构建的其他分支
+    branches: [ "master" ]
 
 jobs:
   build:
