--- a/.github/workflows/buildrelease.yml
+++ b/.github/workflows/buildrelease.yml
@@ -7,7 +7,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
 
     steps:
     - name: Checkout code
@@ -22,3 +25,10 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
+
+    - name: Upload specific JAR to Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: target/PremiumTerminal-*.jar  # 仅上传符合特定格式的 JAR 文件
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 自动生成的访问令牌
