--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
-      packages: write
-      id-token: write
-      actions: write
+      contents: read  # 允许读取仓库内容
+      packages: write  # 允许写入包
+      id-token: write  # 允许获取身份令牌（这对于 GitHub API 访问权限有帮助）
+      actions: write  # 允许写入 actions
+      issues: write  # 可选：如果需要更高权限来操作 release 资源
 
     steps:
     - name: Checkout code
