--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,10 @@ jobs:
       run: mvn clean install
 
     - name: Upload specific JAR to Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v0.1.6
       with:
         files: target/PremiumTerminal-*.jar  # 仅上传符合特定格式的 JAR 文件
+        draft: true
+        fail_on_unmatched_files: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 自动生成的访问令牌
