--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Build and Upload JAR to Release
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "master" ]
 
 jobs:
   build:
