--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Build and Upload JAR to Release
 
 on:
-  push:
-    branches: [ "master" ]
+  push: # 在push时触发
+    tags: # 标签  这里标识在push tag时触发
+      - 'v*' # 以v开头的版本
 
 jobs:
   build:
@@ -28,29 +29,9 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    - name: Get version from pom.xml
-      id: get_version
-      run: |
-        # 使用 Maven 解析 pom.xml 中的版本号
-        VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "Version found: $VERSION"
-
-    - name: Create Release Draft via GitHub API
-      run: |
-        curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -d '{
-                "tag_name": "${{ env.VERSION }}",
-                "target_commitish": "main",
-                "name": "${{ env.VERSION }}",
-                "body": "Release ${ { env.VERSION }}",
-                "draft": true,
-                "prerelease": false
-              }' \
-          https://api.github.com/repos/${{ github.repository }}/releases
-
-    - name: Upload JAR to Release
-      uses: softprops/action-gh-release@v1
+    - name: Upload # 上传
+      uses: softprops/action-gh-release@v2 # 使用第三方actions 上传
+      if: startsWith(github.ref, 'refs/tags/') # 仅在tag时上传
       with:
         files: target/PremiumTerminal-*.jar  # 上传构建好的 JAR 文件
       env:
